--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,6 @@
 
 	<artifactId>dogcare</artifactId>
 	<version>0.0.1-DEV</version>
-	<packaging>war</packaging>
 
 	<name>dogcare</name>
 	<description></description>
@@ -20,8 +19,9 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
-		 <tomcat.version>8.0.3</tomcat.version>
+		<tomcat.version>8.0.3</tomcat.version>
 		<sonar.language>java</sonar.language>
+		<start-class>br.com.fiap.cloud.dogcare.Application</start-class>
 	</properties>
 
 	<dependencies>
@@ -111,6 +111,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
 		</dependency>
 	</dependencies>
 
